--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "submodules/SDL"]
 	path = submodules/SDL
-	url = https://github.com/spurious/SDL-mirror.git
+	url = https://github.com/libsdl-org/SDL.git
 [submodule "submodules/bx"]
 	path = submodules/bx
 	url = https://github.com/bkaradzic/bx.git
